--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     </header>
     <main>
       <section class="about">
-        <div class="circle">
+        <div class="about-img">
+          <div class="circle"></div>
           <img src="./images/person.png" alt="" class="about-image" />
         </div>
 
@@ -72,10 +73,15 @@
           </div>
         </div>
       </section>
-      <section class="section-banner"></section>
+      <section class="section-banner">
+        <div class="watch">
+          <h3 class="banner-title">Awlays keep a positive mindset</h3>
+          <button>Call Now</button>
+        </div>
+      </section>
     </main>
     <footer>
-      <div class="footer-column">
+      <div class="footer-column-1">
         <h3 class="content-title">Future</h3>
         <p class="footer-description">
           There are many variations of passages of Lorem Ipsum available, but
@@ -84,8 +90,14 @@
         </p>
         <p class="email">Email : info@gmail.com</p>
         <p class="phone">Phone : 01500 00 00 00</p>
+        <div class="icons">
+          <img src="./images/icons/fb.png" alt="" /><img
+            src="./images/icons/twitter.png"
+            alt=""
+          /><img src="./images/icons/youtube.png" alt="" />
+        </div>
       </div>
-      <div class="footer-column">
+      <div class="footer-column-2">
         <h3>Subscribe</h3>
         <input type="text" name="" id="" placeholder="Enter Your Email" />
         <input type="submit" value="Subscribe" class="btn-primary" />
